--- a/orcamento.html
+++ b/orcamento.html
@@ -10,6 +10,9 @@
 
   <link rel="preload" href="./css/style.css" as="style">
   <link rel="stylesheet" href="./css/style.css">
+  <script>
+    document.documentElement.classList.add('js')
+  </script>
 </head>
 
 <body id="orcamento">
@@ -180,9 +183,10 @@
           </ul>
         </nav>
       </div>
-      <p class="footer-copy font-2-m cor-6">Lukas Couto © Alguns direitos reservados.</p>
+      <p class="footer-copy font-2-m cor-6">Bickraft @ Design by Origamid and Code by Lukas Couto</p>
     </div>
   </footer>
+  <script src="./js/script.js"></script>
 </body>
 
 </html>
