--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 
   <link rel="preload" href="./css/style.css" as="style">
   <link rel="stylesheet" href="./css/style.css">
+
+  <script>
+    document.documentElement.classList.add('js')
+  </script>
+
 </head>
 
 <body>
@@ -32,11 +37,11 @@
   <main class="introducao-bg">
     <div class="introducao container">
       <div class="introducao-conteudo">
-        <h1 class="font-1-xxl cor-0">Bicicletas feitas sob medida<span class="cor-p1">.</span></h1>
-        <p class="font-2-l cor-5">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft.</p>
-        <a class="botao" href="./bicicletas.html">Escolha a sua</a>
+        <h1 data-anime="200" class="font-1-xxl cor-0 fadeInDown">Bicicletas feitas sob medida<span class="cor-p1">.</span></h1>
+        <p class=" font-2-l cor-5 fadeInDown" data-anime="400">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft.</p>
+        <a class="botao fadeInDown" data-anime="600" href="./bicicletas.html">Escolha a sua</a>
       </div>
-      <picture>
+      <picture data-anime="800" class="fadeInDown">
         <source media="(max-width: 800px)" srcset="./img/bicicletas/nimbus.jpg">
         <img src="./img/fotos/introducao.jpg" width="1280" height="1600" alt="Bicicleta elétrica preta.">
       </picture>
@@ -189,9 +194,11 @@
           </ul>
         </nav>
       </div>
-      <p class="footer-copy font-2-m cor-6">Lukas Couto © Alguns direitos reservados.</p>
+      <p class="footer-copy font-2-m cor-6">Bickraft @ Design by Origamid and Code by Lukas Couto</p>
     </div>
   </footer>
+  <script src="./js/plugins/simple-anime.js"></script>
+  <script src="./js/script.js"></script>
 </body>
 
 </html>
